Fix text alignment

--- a/assets/css/success.css
+++ b/assets/css/success.css
@@ -6,6 +6,6 @@
 }
 
 .wc-payment-gateway-method-name-woopay-wrapper img {
-	margin-top: 6px;
-	margin-right: 9px;
+	margin-right: 0.5rem;
+	padding-top: 4px;
 }
